@@ -2,8 +2,10 @@
 
 | 环境 | 地址 |
 |------|------|
-| Pi 本机 | http://127.0.0.1:8088 · ws://127.0.0.1:8088/ws?token=xxx |
-| 公网 | http://118.25.46.207:6088 · ws://118.25.46.207:6088/ws?token=xxx |
+| Pi 本机 | http://127.0.0.1:8088 · `POST /api/chat`（SSE） |
+| 公网 | http://118.25.46.207:6088 · `POST /api/chat`（SSE） |
+| Prometheus | http://127.0.0.1:9090（仅本机/局域网） |
+| Grafana | http://127.0.0.1:3000（仅本机/局域网） |
 
 先 `POST /api/auth/login` 获取 token；同一用户再次登录会使旧 token 失效（单端）。
 
@@ -11,21 +13,82 @@
 
 对话记忆：启动后 `MysqlSaver` 会在 `yd_jz` 自动建表 `GRAPH_THREAD` / `GRAPH_CHECKPOINT`（`CREATE_IF_NOT_EXISTS`）。checkpoint 含完整 Agent 状态，随轮次增长，注意库容量；清理/备份参考 `scripts/graph_checkpoint_cleanup.sql`。若需手工建表，见 `scripts/graph_checkpoint_ddl.sql`。
 
-## Pi 部署
+## Pi 部署（Docker）
 
 1. 克隆到 `/opt/easyaccount-agent`
-2. 复制 `deploy/.env.docker.pi.example` → `deploy/.env.docker.pi`，填写 `SPRING_AI_DASHSCOPE_API_KEY` 与 `DB_*`
+2. 复制 `deploy/.env.docker.pi.example` → `deploy/.env.docker.pi`，填写 `SPRING_AI_DASHSCOPE_API_KEY`、`DB_*`，并修改 `GRAFANA_ADMIN_PASSWORD`
 3. 执行 `bash deploy/docker-up-pi.sh`
 
-## Jenkins Job
+该脚本会：
+
+1. `mvn clean package -DskipTests`
+2. 校验 jar
+3. 使用三份 compose 启动：业务容器 + Prometheus + Grafana
+
+```text
+docker-compose.yml
+deploy/docker-compose.pi.yml
+deploy/docker-compose.monitor.yml
+```
+
+### 监控端点
+
+| 路径 | 说明 |
+|------|------|
+| `GET /health` | 业务健康检查（Jenkins Smoke） |
+| `GET /actuator/health` | Actuator 健康 |
+| `GET /actuator/prometheus` | Micrometer Prometheus 抓取 |
+
+Grafana 预置仪表盘：**EasyAccount Agent**（JVM、HTTP、SSE 对话、Tool 调用、登录）。
+
+**安全**：`9090` / `3000` / `/actuator/prometheus` 仅供树莓派本机或内网使用，不要通过 frp 映射到公网。
+
+### 日志目录
+
+统一落在 `/var/log/easyaccount-agent/`（容器内与宿主机 bind mount）：
+
+| 文件 | 说明 |
+|------|------|
+| `easyaccount-agent.log` | 应用日志（logback，按日+大小滚动，保留 7 天） |
+| `gc.log` | JVM GC 日志（`-Xlog:gc*`，轮转 5×20MB） |
+| `java_pid*.hprof` | OOM 堆转储（`-XX:HeapDumpOnOutOfMemoryError`） |
+
+本地非 Docker 运行可设 `LOG_HOME=./logs`。
+
+Jenkins 部署脚本会尝试创建该目录；**不要用交互式 sudo**。若首次部署失败，在 Pi 上手工执行一次：
 
 ```bash
+sudo mkdir -p /var/log/easyaccount-agent
+sudo chmod 755 /var/log/easyaccount-agent
+```
+
+之后再跑 Jenkins 或 `bash deploy/docker-up-pi.sh`。
+
+## Jenkins 自动部署
+
+仓库默认分支为 **master**（非 main）。GitHub `push` 到 `master` 后，Jenkins Job 触发：
+
+1. `git reset --hard origin/master`
+2. `bash deploy/docker-up-pi.sh`
+3. Smoke：`/health` + `/actuator/prometheus`；并探测 Prometheus/Grafana 就绪
+
+```bash
+sudo mkdir -p /var/lib/jenkins/jobs/easyaccount-agent
 sudo cp /opt/easyaccount-agent/deploy/jenkins/job-config.xml \
   /var/lib/jenkins/jobs/easyaccount-agent/config.xml
 sudo chown jenkins:jenkins /var/lib/jenkins/jobs/easyaccount-agent/config.xml
 sudo systemctl restart jenkins
 ```
 
+GitHub 仓库需配置 Webhook：`http://<jenkins>/github-webhook/`，事件选 `Just the push event`。
+
+若日后将默认分支改名为 `main`，需同步修改：
+
+- `Jenkinsfile` 中的 `origin/master`
+- `deploy/jenkins/job-config.xml` 中的 `*/master`
+
 ## frp（公网 6088 → 本机 8088）
 
 参考 `deploy/frpc-services.toml.example` 追加到 `/etc/frp/frpc.toml` 后 `sudo systemctl restart frpc`。
+
+勿映射 Prometheus/Grafana 端口。
